components/keycloak/base/cluster-namespace-databases-keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: databases-keycloak
