components/keycloak/base/databases-keycloak-deployment-keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: databases-keycloak
  labels:
    app.kubernetes.io/name: keycloak-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak-db
    spec:
      serviceAccountName: keycloak-db
      containers:
        - name: keycloak-db
          image: registry.redhat.io/rhel8/postgresql-13:1
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 5432
          readinessProbe:
            timeoutSeconds: 1
            initialDelaySeconds: 5
            exec:
              command:
                - /bin/sh
                - -i
                - -c
                - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c 'SELECT 1'
          volumeMounts:
            - name: keycloak-db-data
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: keycloak-db-data
          persistentVolumeClaim:
            claimName: keycloak-db
