components/keycloak/base/databases-keycloak-service-keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: databases-keycloak
spec:
  ports:
    - name: postgresql
      port: 5432
  selector:
    app.kubernetes.io/name: keycloak-db
